--- a/qrtask/package.json
+++ b/qrtask/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
