--- a/qrtask/package.json
+++ b/qrtask/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "qrcode": "^1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
