--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "qrtask": "npm start --prefix qrtask",
     "dev": "concurrently \"npm start\" \"npm run qrtask\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix qrtask && npm run build --prefix qrtask"
